font face update & add readme

--- a/frontend/src/_includes/shopping-cart-modal.njk
+++ b/frontend/src/_includes/shopping-cart-modal.njk
@@ -2,5 +2,6 @@
     <ul id="shopping-list" class="service-item-wrapper">
     </ul>
         <button id="clear-all" class="hidden">Clear All</button>
-
+        <button id="submit" class="hidden">Submit</button>
+        
 </div>
