--- a/frontend/src/scss/abstracts/_font-face.scss
+++ b/frontend/src/scss/abstracts/_font-face.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: Ideal Sans;
 
-  src: url("/fonts/IdealSansSSm-Semibold_1.woff") format("woff");
+  src: url("/fonts/IdealSansSSm-Semibold.woff2") format("woff2");
 
   font-style: normal;
   font-weight: 700;
@@ -9,7 +9,7 @@
 @font-face {
   font-family: Ideal Sans;
 
-  src: url("/fonts/IdealSansSSm-Medium.woff") format("woff");
+  src: url("/fonts/IdealSansSSm-Medium.woff2") format("woff2");
 
   font-style: normal;
   font-weight: 500;
@@ -17,7 +17,7 @@
 @font-face {
   font-family: Ideal Sans;
 
-  src: url("/fonts/IdealSansSSm-Book.woff") format("woff");
+  src: url("/fonts/IdealSansSSm-Book.woff2") format("woff2");
 
   font-style: normal;
   font-weight: 400;
@@ -25,7 +25,7 @@
 
 @font-face {
   font-family: Quarto;
-  src: url("/fonts/Quarto-Semibold_1.woff") format("truetype");
+  src: url("/fonts/Quarto-Semibold.woff2") format("woff2");
 }
 
 // Define variables
