--- a/frontend/src/scss/components/_nav.scss
+++ b/frontend/src/scss/components/_nav.scss
@@ -3,7 +3,7 @@
 
 nav {
   display: flex;
-  background-color: var(--clr-accent-blue);
+  background-color: gray;
   width: fit-content;
   //   margin: auto;
   border-radius: 0 0 0.25em 0.25em;
