--- a/frontend/src/scss/components/_template-modal.scss
+++ b/frontend/src/scss/components/_template-modal.scss
@@ -2,7 +2,7 @@
 @use "../abstracts/type-scale" as *;
 
 #template-modal {
-  background-color: red;
+  background-color: var(--clr-neutral-700);
   position: absolute;
   @include mq(medium) {
     height: 100%;
