--- a/frontend/src/scss/components/_buttons.scss
+++ b/frontend/src/scss/components/_buttons.scss
@@ -30,15 +30,17 @@ button {
   bottom: 0;
   height: 100px;
   background: linear-gradient(
-    0deg,
-    rgba(247, 247, 247, 100%) 0%,
-    hsl(0, 0%, 97%) 50%
+    180deg,
+    rgba(247, 247, 247, 50%) 0%,
+    rgba(247, 247, 247, 100%) 50%
   );
   //   hsl(0, 0%, 97%)
   #template-btn {
     margin: 0 auto;
     height: max-content;
-    background-color: transparent;
     font-weight: $fw-b;
+    &:hover {
+      background-color: var(--clr-neutral-700);
+    }
   }
 }
